Add fragile layering system